<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/Widget.MaterialComponents.CardView"
        app:cardCornerRadius="@dimen/cardDialogCornerRadius"
        app:contentPadding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_dialog_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_product"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/text_input_layout_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:hintTextColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dialog_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_name_hint"
                    app:hintTextColor="@color/text_hint_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:hintTextColor="@color/text_color"
                app:layout_constraintEnd_toStartOf="@id/text_input_layout_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_quantity_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_quantity_hint"
                    android:inputType="numberDecimal"
                    app:hintTextColor="@color/text_hint_color" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:hintTextColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_input_layout_quantity"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_price_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_price_hint"
                    android:inputType="numberDecimal"
                    app:hintTextColor="@color/text_hint_color" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_unit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:hintTextColor="@color/text_color"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_quantity">

                <AutoCompleteTextView
                    android:id="@+id/tv_auto_complete_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_unit_hint"
                    android:inputType="none"
                    app:hintTextColor="@color/text_hint_color" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_dialog_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/insert_into_cart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_unit" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel_dialog"
                style="@style/Theme.CanBuy.ButtonDialogStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_confirm_dialog"
                app:layout_constraintTop_toBottomOf="@id/cb_dialog_cart" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_confirm_dialog"
                style="@style/Theme.CanBuy.ButtonDialogStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_dialog_cart"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>